--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -88,29 +88,27 @@
         \begin{equation*}
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
                 \CodeBefore
-                \rectanglecolor{yellow!40}{1-1}{1-1}
-                \rectanglecolor{green!40}{2-1}{4-1}
+                \rectanglecolor{yellow!40}{1-1}{3-1}
+                \rectanglecolor{green!40}{4-1}{9-1}
                 \Body
                 x \\
                 y \\
                 \theta \\
-                \map{1,x} \\
-                \map{1,y} \\
+                \map_{1,x} \\
+                \map_{1,y} \\
                 \vdots \\
-                \map{n,x} \\
-                \map{n,y}
+                \map_{n,x} \\
+                \map_{n,y}
             \end{bNiceMatrix}}_{\mu}
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
-                \sigma_{xx} & \sigma_{xy} & \sigma_{x\theta} \\
-                \sigma_{yx} & \sigma_{yy} & \sigma_{y\theta} \\
-                \sigma_{\theta x} & \sigma_{\theta y} & \sigma_{\theta\theta} \\
-                \sigma_{\map{1,x}x} & \sigma_{\map{1,x}y} & \sigma_{\map{1,x}\theta} & \Cdots & \sigma_{\map{n,x}x} & \sigma_{\map{n,x}y} \\
-                \sigma_{\map{1,y}x} & \sigma_{\map{1,y}y} & \sigma_{\map{1,y}\theta} & \Cdots & \sigma_{\map{n,y}x} & \sigma_{\map{n,y}y} \\
-                \sigma_{\map{1,x}\map{1,x}} & \sigma_{\map{1,x}\map{1,y}} & \Cdots & \sigma_{\map{1,x}\map{n,x}} & \sigma_{\map{1,x}\map{n,y}} \\
-                \sigma_{\map{1,y}\map{1,x}} & \sigma_{\map{1,y}\map{1,y}} & \Cdots & \sigma_{\map{1,y}\map{n,x}} & \sigma_{\map{1,y}\map{n,y}} \\
-                \vdots & \vdots & \ddots & \vdots & \vdots \\
-                \sigma_{\map{n,x}\map{1,x}} & \sigma_{\map{n,x}\map{1,y}} & \Cdots & \sigma_{\map{n,x}\map{n,x}} & \sigma_{\map{n,x}\map{n,y}} \\
-                \sigma_{\map{n,y}\map{1,x}} & \sigma_{\map{n,y}\map{1,y}} & \Cdots & \sigma_{\map{n,y}\map{n,x}} & \sigma_{\map{n,y}\map{n,y}}
+                \sigma_{xx} & \sigma_{xy} & \sigma_{x\theta} & \sigma_{x \map_{1,x}} & \sigma_{x \map_{1,y}} & \cdots &\sigma_{x \map_{n,x}} & \sigma_{x \map_{n,y}}\\
+                \sigma_{yx} & \sigma_{yy} & \sigma_{y\theta} & \sigma_{y \map_{1,x}} & \sigma_{y \map_{1,y}} & \cdots &\sigma_{y \map_{n,x}} & \sigma_{y \map_{n,y}}\\
+                \sigma_{\theta x} & \sigma_{\theta y} & \sigma_{\theta\theta} & \sigma_{\theta \map_{1,x}} & \sigma_{\theta \map_{1,y}} & \cdots & \sigma_{\theta \map_{n,x}} & \sigma_{\theta \map_{n,y}}\\
+                \sigma_{\map_{1,x}x} & \sigma_{\map_{1,x}y} & \sigma_{\map_{1,x}\theta} & \cdots & \sigma_{\map_{1,x}\map_{n,x}} & \sigma_{\map_{1,x}\map_{n,x}} \\
+                \sigma_{\map_{1,y}x} & \sigma_{\map_{1,y}y} & \sigma_{\map_{1,y}\theta} & \cdots & \sigma_{\map_{1,x}\map_{n,y}} & \sigma_{\map_{1,x}\map_{n,y}} \\
+                \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \vdots \\
+                \sigma_{\map_{n,x}x} & \sigma_{\map_{n,x}y} & \sigma_{\map_{n,x}\theta}  & \cdots &  \sigma_{\map_{n,x} \map_{n,x}} & \sigma_{\map_{n,x} \map_{n,y}} \\
+                \sigma_{\map_{n,y}x} & \sigma_{\map_{n,y}y} & \sigma_{\map_{n,y}\theta}  & \cdots &  \sigma_{\map_{n,y} \map_{n,x}} & \sigma_{\map_{n,y} \map_{n,y}}
             \end{bNiceMatrix}}_{\Sigma}
         \end{equation*}
     \end{itemize}
