Slides 08: Improve covariance matrix

--- a/teoricas/teorica_08/src/ekf_slam.tex
+++ b/teoricas/teorica_08/src/ekf_slam.tex
@@ -79,9 +79,6 @@
     \note{Información extraída de https://www.youtube.com/watch?v=X30sEgIws0g}
     \note{Información extraída de https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-16-ekf-slam.pptx.pdf}
 
-    \TODO{Agregar matriz mas detallada}
-    \TODO{\url{http://ais.informatik.uni-freiburg.de/teaching/ws15/mapping/pdf/slam05-ekf-slam.pdf}}
-
     \begin{itemize}
         \item Map with $n$ landmarks: $(3+2n)$-dimensional Gaussian
         \item Belief represented by:
@@ -89,7 +86,7 @@
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
                 \CodeBefore
                 \rectanglecolor{yellow!40}{1-1}{3-1}
-                \rectanglecolor{green!40}{4-1}{9-1}
+                \rectanglecolor{blue!20}{4-1}{9-1}
                 \Body
                 x \\
                 y \\
@@ -101,14 +98,20 @@
                 \map_{n,y}
             \end{bNiceMatrix}}_{\mu}
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
-                \sigma_{xx} & \sigma_{xy} & \sigma_{x\theta} & \sigma_{x \map_{1,x}} & \sigma_{x \map_{1,y}} & \cdots &\sigma_{x \map_{n,x}} & \sigma_{x \map_{n,y}}\\
-                \sigma_{yx} & \sigma_{yy} & \sigma_{y\theta} & \sigma_{y \map_{1,x}} & \sigma_{y \map_{1,y}} & \cdots &\sigma_{y \map_{n,x}} & \sigma_{y \map_{n,y}}\\
+                \CodeBefore
+                \rectanglecolor{yellow!40}{1-1}{3-3}
+                \rectanglecolor{green!40}{1-4}{3-8}
+                \rectanglecolor{green!40}{4-1}{8-3}
+                \rectanglecolor{blue!20}{4-4}{8-8}
+                \Body
+                \sigma_{xx} & \sigma_{xy} & \sigma_{x\theta} & \sigma_{x \map_{1,x}} & \sigma_{x \map_{1,y}} & \cdots & \sigma_{x \map_{n,x}} & \sigma_{x \map_{n,y}}\\
+                \sigma_{yx} & \sigma_{yy} & \sigma_{y\theta} & \sigma_{y \map_{1,x}} & \sigma_{y \map_{1,y}} & \cdots & \sigma_{y \map_{n,x}} & \sigma_{y \map_{n,y}}\\
                 \sigma_{\theta x} & \sigma_{\theta y} & \sigma_{\theta\theta} & \sigma_{\theta \map_{1,x}} & \sigma_{\theta \map_{1,y}} & \cdots & \sigma_{\theta \map_{n,x}} & \sigma_{\theta \map_{n,y}}\\
-                \sigma_{\map_{1,x}x} & \sigma_{\map_{1,x}y} & \sigma_{\map_{1,x}\theta} & \cdots & \sigma_{\map_{1,x}\map_{n,x}} & \sigma_{\map_{1,x}\map_{n,x}} \\
-                \sigma_{\map_{1,y}x} & \sigma_{\map_{1,y}y} & \sigma_{\map_{1,y}\theta} & \cdots & \sigma_{\map_{1,x}\map_{n,y}} & \sigma_{\map_{1,x}\map_{n,y}} \\
+                \sigma_{\map_{1,x}x} & \sigma_{\map_{1,x}y} & \sigma_{\map_{1,x}\theta} & \sigma_{\map_{1,x}\map_{1,x}} & \sigma_{\map_{1,x}\map_{1,y}} & \cdots & \sigma_{\map_{1,x} \map_{n,x}} & \sigma_{\map_{1,x} \map_{n,y}} \\
+                \sigma_{\map_{1,y}x} & \sigma_{\map_{1,y}y} & \sigma_{\map_{1,y}\theta} & \sigma_{\map_{1,y}\map_{1,x}} & \sigma_{\map_{1,y}\map_{1,y}} & \cdots & \sigma_{\map_{1,y} \map_{n,x}} & \sigma_{\map_{1,y} \map_{n,y}} \\
                 \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \vdots \\
-                \sigma_{\map_{n,x}x} & \sigma_{\map_{n,x}y} & \sigma_{\map_{n,x}\theta}  & \cdots &  \sigma_{\map_{n,x} \map_{n,x}} & \sigma_{\map_{n,x} \map_{n,y}} \\
-                \sigma_{\map_{n,y}x} & \sigma_{\map_{n,y}y} & \sigma_{\map_{n,y}\theta}  & \cdots &  \sigma_{\map_{n,y} \map_{n,x}} & \sigma_{\map_{n,y} \map_{n,y}}
+                \sigma_{\map_{n,x}x} & \sigma_{\map_{n,x}y} & \sigma_{\map_{n,x}\theta} & \sigma_{\map_{n,x} \map_{1,x}} & \sigma_{\map_{n,x} \map_{1,y}} &\cdots & \sigma_{\map_{n,x} \map_{n,x}} & \sigma_{\map_{n,x} \map_{n,y}} \\
+                \sigma_{\map_{n,y}x} & \sigma_{\map_{n,y}y} & \sigma_{\map_{n,y}\theta} & \sigma_{\map_{n,y} \map_{1,x}} & \sigma_{\map_{n,y} \map_{1,y}} & \cdots & \sigma_{\map_{n,y} \map_{n,x}} & \sigma_{\map_{n,y} \map_{n,y}}
             \end{bNiceMatrix}}_{\Sigma}
         \end{equation*}
     \end{itemize}
@@ -126,7 +129,7 @@
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
                 \CodeBefore
                 \rectanglecolor{yellow!40}{1-1}{1-1}
-                \rectanglecolor{green!40}{2-1}{4-1}
+                \rectanglecolor{blue!20}{2-1}{4-1}
                 \Body
                 \state_t \\
                 \map_1 \\
@@ -138,7 +141,7 @@
                 \rectanglecolor{yellow!40}{1-1}{1-1}
                 \rectanglecolor{green!40}{2-1}{4-1}
                 \rectanglecolor{green!40}{1-2}{1-4}
-                \rectanglecolor{blue!40}{2-2}{4-4}
+                \rectanglecolor{blue!20}{2-2}{4-4}
                 \Body
                 \Sigma_{\state_t \state_t} & \Sigma_{\state_t \map_1} & \cdots & \Sigma_{\state_t \map_n} \\
                 \Sigma_{\map_1 \state_t} & \Sigma_{\map_1 \map_1} & \cdots & \Sigma_{\map_1 \map_n} \\
@@ -160,7 +163,7 @@
             \underbrace{\begin{bNiceMatrix}[margin = 4pt]
                 \CodeBefore
                 \rectanglecolor{yellow!40}{1-1}{1-1}
-                \rectanglecolor{green!40}{2-1}{2-1}
+                \rectanglecolor{blue!20}{2-1}{2-1}
                 \Body
                 \state\\
                 \map
@@ -170,7 +173,7 @@
                 \rectanglecolor{yellow!40}{1-1}{1-1}
                 \rectanglecolor{green!40}{2-1}{2-1}
                 \rectanglecolor{green!40}{1-2}{1-2}
-                \rectanglecolor{blue!40}{2-2}{2-2}
+                \rectanglecolor{blue!20}{2-2}{2-2}
                 \Body
                 \Sigma_{\state \state} & \Sigma_{\state \map} \\
                 \Sigma_{\map \state} & \Sigma_{\map \map}
