--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -20,6 +20,15 @@
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{SLAM Applications}
+    
+    \begin{center}
+        \includegraphics[width=0.7\textwidth]{slam_applications.pdf}
+    \end{center}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Ejemplo de SLAM}
