--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -408,7 +408,6 @@ SLAM Handbook
   publisher={Cambridge University Press},
   author={Luca Carlone and Ayoung Kim and Frank Dellaert and Timothy Barfoot and Daniel Cremers},
   year={2025},
-  publisher={Cambridge University Press},
-  url={https://github.com/SLAM-Handbook-contributors/slam-handbook-public-release/blob/main/main.pdf}
+  publisher={Cambridge University Press}
 }
 
