--- a/teoricas/teorica_01/src/bibliography.tex
+++ b/teoricas/teorica_01/src/bibliography.tex
@@ -7,6 +7,7 @@
     \nocite{choset2005principles}
     \nocite{corke2017robotics}
     \nocite{hartley2003multiple}
+    \nocite{carlone2025slamhandbook}
 
     \printbibliography
 
