--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{Herramienta de trabajo}
+    \frametitle{Herramientas de trabajo}
 
     \begin{itemize}
         \item C++/Python
@@ -9,10 +9,16 @@
         \item Docker: contenedor
         \item Latex/Lyx: escritura de informes o papers
         \item VScode: IDE de desarrollo
-        \item Mendeley: manejador de papers
         \item Yed: diagramas
-        \item inkscape: gráficos vectorizados + plugin \href{TexText}{https://textext.github.io/textext/}
+        \item inkscape: gráficos vectorizados + plugin \href{https://textext.github.io/textext/}{TexText}
         \item pdfpc: visualizador de slides (hechas en latex)
-        \item Visualizar Rotaciones \href{https://articulatedrobotics.xyz/tools/rotation-calculator}{https://articulatedrobotics.xyz/tools/rotation-calculator}
+        \item Visualizar Rotaciones \url{https://articulatedrobotics.xyz/tools/rotation-calculator}
+        \item Búsqueda y Análisis de papers:
+        \begin{itemize}
+            \item Búsqueda Avanzada de Google Scholar \url{https://scholar.google.com/}
+            \item Mendeley: manejador de papers
+            \item \url{https://www.connectedpapers.com/}: grafo para búsqueda del estado del arte
+            \item NotebookLM: Ayuda en la comprensión \url{https://notebooklm.google.com/}
+        \end{itemize}
     \end{itemize}
 \end{frame}
